k8s/aspnetapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnetapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aspnetapp
  template:
    metadata:
      labels:
        app: aspnetapp
    spec:
      containers:
      - name: aspnetapp
        image: registry.digitalocean.com/dnw2022/dnw2022-asapnetapp:latest
#        image: acrdnw.azurecr.io/aspnetapp:latest
#        image: dnw2022/aspnetapp
#        resources:
#          limits:
#            memory: "128Mi"
#            cpu: "500m"
        ports:
        - containerPort: 80
