k8s/aspnetapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: aspnetapp-service
spec:
  type: ClusterIP
  selector:
    app: aspnetapp
  ports:
  - port: 3000
    targetPort: 80
