k8s/ingress.yml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # ADD ANNOTATION
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # UPDATE ANNOTATION
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - aspnetapp.dotnet-works.com
      secretName: aspnetapp-dotnet-works-com-tls
  rules:
    - host: aspnetapp.dotnet-works.com
      http:
        paths:
        - path: /?(.*)
          # UPDATE PATH
          pathType: Prefix
          # ADD PATHTYPE
          backend:
            service:
              # UPDATE SERVICE FIELDS
              name: aspnetapp-service
              port:
                number: 3000
